# causers

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PROJECT_SUMMARY.md  README.md  pyproject.toml  scratch.txt
docs/: api-reference.md  github-release-draft.md  release-checklist.md  requirements.txt  score_bootstrap.md
docs/source/: conf.py  index.rst
examples/: basic_regression.py
examples/benchmarks/: linear_regression.ipynb  logistic_regression.ipynb  synthetic_control.ipynb  synthetic_did.ipynb
python/causers/: __init__.py
src/: cluster.rs  lib.rs  logistic.rs  sdid.rs  stats.rs  synth_control.rs
tests/: test_clustered_se.py  test_edge_cases.py  test_integration.py  test_linear_regression.py  test_logistic_regression.py  test_performance.py  test_property_based.py  test_synthetic_control.py  test_synthetic_did.py
