[package]
name = "causers"
version = "0.4.0"
edition = "2021"
authors = ["James Nordlund"]
license = "MIT"
description = "High-performance statistical operations for Polars DataFrames"
repository = "https://github.com/causers/causers"
readme = "README.md"

[lib]
name = "causers"
crate-type = ["cdylib", "rlib"]

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.21", features = ["abi3-py38"] }
polars = { version = "0.44", default-features = false }
numpy = "0.21"
ndarray = "0.16"

[dev-dependencies]
approx = "0.5"
pyo3 = { version = "0.21", features = ["auto-initialize"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
